NEWS
----

New in 1.9.47:

* cups.cancelJob() now takes optional purge_job argument.
* cups.setPasswordCB2() method.
* cups.Connection.moveJob() method.
* cups.IPPAttribute and cups.IPPRequest types.
* IPP state constants.
* cups.Connection.getDevices() now takes optional timeout argument.

New in 1.9.46:

* cups.Connection.getDevices() now takes optional limit,
  exclude_schemes and include_schemes arguments.
* cups.Connection.getPPDs() now takes optional limit, exclude_schemes,
  include_schemes, ppd_device_id, ppd_make, ppd_make_and_model,
  ppd_model_number, ppd_product, ppd_psversion, ppd_type and
  ppd_natural_language arguments.
* cups.ppdSetConformance() method.
* cups.PPD_CONFORM_RELAXED constant.
* cups.PPD_CONFORM_STRICT constant.
* cups.modelSort() now accepts Unicode strings.

New in 1.9.45:

* cups.PPD.localizeIPPReason()
* cups.PPD.localizeMarkerName()

New in 1.9.42:

* cups.Connection.getJobAttributes() now takes optional requested_attributes
  argument.
* cups.Connection.getJobs() now takes optional limit and first_job_id
  arguments.

New in 1.9.41:

* cups.Connection.putFile() now accepts a file descriptor or a Python
  file object as the destination.

New in 1.9.40:

* cups.Connection() now takes optional arguments host, port, and
  encryption.
* cups.Connection.getPrinterAttributes() now takes an optional
  requested_attributes argument

New in 1.9.39:

* cups.Connection.authenticateJob() auth parameter is now optional
* cups.Connection.printFile()
* cups.Connection.printFiles()

New in 1.9.38:

* cups.Connection.getFile() now accepts a file descriptor or a Python file
  object as the destination.

New in 1.9.37:

* cups.Connection.authenticateJob()
* cups.CUPS_PRINTER_DISCOVERED

New in 1.9.36:

* cups.Connection.renewSubscription() now takes an optional parameter
  lease_duration.
* cups.Connection.getJobAttributes() and
  cups.Connection.getNotificaitons(): State reasons are now lists as they
  ought to be.

New in 1.9.35:
